--- a/index.html
+++ b/index.html
@@ -33,13 +33,10 @@
     <div id="main"></div>
     <div id="particles"></div>
     <div id="title">
-        <h1>Abeda Alam</h1>
-        <h2 id="subtitle">Web Developer</h2>
+        <h1>New Yorkers for Bangladeshi Mutual Aid</h1>
+        <h2 id="subtitle">Work with Us!</h2>
         <div id="navbar">
             <span class="navlink" id="email"><a href="mailto:abbey.alam@gmail.com?Subject=Hey%20Abi!" target="_newtab"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></span>
-            <span class="navlink" id="github"><a href="http://www.github.com/mxabibuilds" target="_newtab"><i class="fa fa-github" aria-hidden="true"></i></a></span>
-            <span class="navlink" id="linkedin"><a href="http://www.linkedin.com/in/abedaalam" target="_newtab"><i class="fa fa-linkedin" aria-hidden="true"></i></a></span>
-            <span class="navlink" id="resume"><a href="#resumeModal" data-toggle="modal"><i class="fa fa-file-text-o" aria-hidden="true"></i></a></span>
         </div>
     </div>
     <div id="sidebarTab-left" class="sidebarTab">
